# todoist-semantic-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start-todoist-mcp.sh
docs/: DEBUGGING.md
specs/: semantic_functions.md
src/mcp_todoist/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
src/mcp_todoist/tools/: __init__.py  labels.py  projects.py  tasks.py
src/mcp_todoist/utils/: __init__.py  error_handling.py  logging.py
tests/: __init__.py  test_server.py
